deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neeker
spec:
  strategy:    
    rollingUpdate:
      maxUnavailable: 0
  selector:
    matchLabels:
      app: neeker
  replicas: 3
  template:
    metadata:
      labels:
        app: neeker
    spec:
      containers:
      - name: neeker
        imagePullPolicy: Never
        image: neeker
        ports:
        - containerPort: 4000
        - containerPort: 9001
        - containerPort: 4369
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
