service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neeker
  labels:
    app: neeker
spec:
  # type: ClusterIP
  selector:
    app: neeker
  ports:
  - port: 4010
    targetPort: 4000
  clusterIP: None
